[gd_scene load_steps=20 format=2]

[ext_resource path="res://Skills.gd" type="Script" id=1]
[ext_resource path="res://images/pickaxe_icon.png" type="Texture" id=2]
[ext_resource path="res://fonts/Montserrat/Montserrat-Bold.tres" type="DynamicFont" id=3]
[ext_resource path="res://fonts/Montserrat/Montserrat-Medium.tres" type="DynamicFont" id=4]
[ext_resource path="res://ProgressBar.tscn" type="PackedScene" id=5]
[ext_resource path="res://images/axe_icon.png" type="Texture" id=6]
[ext_resource path="res://fonts/Montserrat/Montserrat-Bold.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://audio/level_up/ecofuture3.ogg" type="AudioStream" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.266667, 0.266667, 0.266667, 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=20]
size = 28
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=19]
resource_name = "LevelUp-default-in"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("LevelUp:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 0.637281 ),
"update": 1,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LevelUp:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "LevelUp-default-out"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("LevelUp:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 0.637281 ),
"update": 1,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LevelUp:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("LevelUp:rect_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 0.637281, 0.637281 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LevelUp:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("LevelUp:rect_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 0.637281, 0.637281 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LevelUp:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "RequiredLevel-default-in"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("RequiredLevel:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RequiredLevel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "RequiredLevel-default-out"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("RequiredLevel:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RequiredLevel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "RequiredLevel-in"
tracks/0/type = "value"
tracks/0/path = NodePath("RequiredLevel:rect_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 0.63728, 0.637281 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RequiredLevel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "RequiredLevel-out"
tracks/0/type = "value"
tracks/0/path = NodePath("RequiredLevel:rect_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 0.63728, 0.637281 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RequiredLevel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Skills" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -115.0
margin_right = 250.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Panel/MarginContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 248.0
margin_bottom = 113.0
color = Color( 0.443137, 0.443137, 0.443137, 1 )

[node name="PickaxeIcon" type="Sprite" parent="CanvasLayer/Panel/MarginContainer/ColorRect"]
position = Vector2( 34, 36 )
texture = ExtResource( 2 )

[node name="MiningTitle" type="Label" parent="CanvasLayer/Panel/MarginContainer/ColorRect"]
margin_left = 62.0
margin_top = 8.0
margin_right = 125.0
margin_bottom = 24.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = ExtResource( 3 )
text = "Mining"

[node name="MiningLevel" type="Label" parent="CanvasLayer/Panel/MarginContainer/ColorRect"]
margin_left = 162.0
margin_top = 8.0
margin_right = 225.0
margin_bottom = 24.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = ExtResource( 4 )
text = "Level 1"
align = 2

[node name="MiningProgress" parent="CanvasLayer/Panel/MarginContainer/ColorRect" instance=ExtResource( 5 )]
margin_left = 62.0
margin_top = 25.0
margin_right = 226.0
margin_bottom = 47.0

[node name="AxeIcon" type="Sprite" parent="CanvasLayer/Panel/MarginContainer/ColorRect"]
position = Vector2( 34, 78 )
texture = ExtResource( 6 )

[node name="WoodcuttingTitle" type="Label" parent="CanvasLayer/Panel/MarginContainer/ColorRect"]
margin_left = 62.0
margin_top = 52.0
margin_right = 125.0
margin_bottom = 68.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = ExtResource( 3 )
text = "Woodcutting"

[node name="WoodcuttingLevel" type="Label" parent="CanvasLayer/Panel/MarginContainer/ColorRect"]
margin_left = 162.0
margin_top = 52.0
margin_right = 225.0
margin_bottom = 68.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = ExtResource( 4 )
text = "Level 1"
align = 2

[node name="WoodcuttingProgress" parent="CanvasLayer/Panel/MarginContainer/ColorRect" instance=ExtResource( 5 )]
margin_left = 62.0
margin_top = 69.0
margin_right = 226.0
margin_bottom = 91.0

[node name="LevelUp" type="Label" parent="CanvasLayer"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 177.0
margin_bottom = 217.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 640, 23 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.588235 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "You are now level X in Y"
align = 1
valign = 1

[node name="RequiredLevel" type="Label" parent="CanvasLayer"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 117.0
margin_bottom = 157.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 640, 23 )
custom_fonts/font = SubResource( 20 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.588235 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "Too low Y level, required: X"
align = 1
valign = 1

[node name="LevelUpAnimations" type="AnimationPlayer" parent="CanvasLayer"]
anims/LevelUp-default-in = SubResource( 19 )
anims/LevelUp-default-out = SubResource( 4 )
anims/LevelUp-in = SubResource( 5 )
anims/LevelUp-out = SubResource( 6 )

[node name="RequiredLevelAnimations" type="AnimationPlayer" parent="CanvasLayer"]
anims/RequiredLevel-default-in = SubResource( 15 )
anims/RequiredLevel-default-out = SubResource( 16 )
anims/RequiredLevel-in = SubResource( 17 )
anims/RequiredLevel-out = SubResource( 18 )

[node name="LevelUpTimer" type="Timer" parent="CanvasLayer"]
wait_time = 3.0

[node name="RequiredLevelTimer" type="Timer" parent="CanvasLayer"]
wait_time = 3.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="CanvasLayer"]
stream = ExtResource( 8 )
[connection signal="timeout" from="CanvasLayer/LevelUpTimer" to="." method="_on_LevelUpTimer_timeout"]
[connection signal="timeout" from="CanvasLayer/RequiredLevelTimer" to="." method="_on_RequiredLevelTimer_timeout"]
